# webssh.sh

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPRECATION_NOTES.md  Makefile  README.md  TESTING.md  noxfile.py  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py  test_all_versions.sh  tox.ini
.github/workflows/: test.yml
tests/: __init__.py  test_e2e.py  test_integration.py  test_wshcopy.py
wsh/: wshcopy.py
