[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webssh-sh"
version = "22.11.8"
description = "Shell Helpers about WebSSH"
readme = "README.md"
authors = [
    {name = "Arnaud MENGUS"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
dependencies = [
    "importlib-metadata>=1.0; python_version<'3.8'",
]

[project.scripts]
wshcopy = "wsh.wshcopy:cli"

[project.urls]
Homepage = "https://github.com/tobiashochguertel/webssh.sh"

[tool.setuptools]
packages = ["wsh"]
license-files = ["LICENSE"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.coverage.run]
source = ["wsh"]
omit = ["tests/*", "venv/*", ".tox/*", ".nox/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
